--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,13 @@
   http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-    <system.web>
-        <compilation debug="true" targetFramework="4.5" />
-    </system.web>
+  <connectionStrings>
+    <add name="Application" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\Application.mdf;Integrated Security=True" />
+  </connectionStrings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.5" />
+  </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
+  </system.webServer>
 </configuration>
