--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,4 @@
 /App_Data/Application_log.ldf
 /App_Data/ContactSeeder.zip
 /App_Data/dbo.Contacts.sql
-/Bin/ASNA.Palooza.Lab2014.JsonLib.dll
-/Bin/ASNA.Palooza.Lab2014.JsonLib.pdb
+/Bin/*
