--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /app_assets/.sass-cache/
+/Bin/ASNA.Palooza.Lab2014.JsonLib.dll
+/Bin/ASNA.Palooza.Lab2014.JsonLib.pdb
 /*.sublime-project
 /*.sublime-workspace
