--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
     "name": "asnapalooza/singlepageapp",
     "dependencies": {
+        "almond": null,
         "backbone": "~1.1",
         "bootstrap": "~3.2",
         "bootstrap-sass-official": "~3.2",
@@ -12,8 +13,5 @@
         "requirejs": "~2.1",
         "requirejs-text": "~2.0",
         "underscore": "~1.6"
-    },
-    "resolutions": {
-        "jquery": "~1.11"
     }
 }
